--- a/public/html/tuanHistoryDetail.html
+++ b/public/html/tuanHistoryDetail.html
@@ -21,8 +21,8 @@
             <h1>今天我买单<span ng-show="type == 13">(已完成)</span><span ng-show="type == 14">(已撤销)</span></h1>
             <h2 class="date">{{date}}</h2>
             <div class="members">
-                <label ng-class="{paid : member.money != 0}" ng-style="member.avatarBg"  ng-repeat="member in members">
-                    <p>{{member.money}}</p>
+                <label hm-hold="modMoney(member)" ng-class="{paid : member.money != 0}" ng-style="member.avatarBg"  ng-repeat="member in members">
+                    <p>{{member.modMoney}}</p>
                 </label>
             </div>
             <h2 ng-show="money">筹款目标：{{money}} 元</h2>
