--- a/public/html/modals/changeName.html
+++ b/public/html/modals/changeName.html
@@ -1,8 +1,5 @@
-<div class="modal-header">
-    <h3 class="modal-title">输入新昵称！</h3>
-</div>
 <div class="modal-body">
-    <input type="text"  id="nameInput" ng-model="newNickname"/>
+    <input type="text"  id="nameInput" placeholder="输入新昵称！" ng-model="newNickname"/>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok($scope.newNickname)">OK</button>
