--- a/public/html/tuanMembers.html
+++ b/public/html/tuanMembers.html
@@ -19,6 +19,7 @@
                 </li>
             </ul>
             <ul ng-if="!member.history"  class="dropdown-menu">
+                <li class="nickname"> <span>({{member.name}})</span> </li>
                 <li> <span class="first">暂无历史</span> </li>
             </ul>
         </div>
