--- a/public/html/tuanHistory.html
+++ b/public/html/tuanHistory.html
@@ -14,9 +14,14 @@
                 'ABDOWN_BILL': 16,      // 正在进行的ABDown消费
                 'FINISH_ABDOWN': 17,    // 结束的ABDown消费
                 'REVERT_ABDOWN': 18     // 撤销的ABDown消费-->
-        <li ng-class="{deleted : history.deleted}" ng-switch="history.type" ng-repeat="history in histories" ng-swipe-left="swipeLeft(history.revertable)" ng-swipe-right="swipeRight(history.revertable)" >
-            <div ng-if="history.revertable" class="delete" ng-show="showDelete" ng-click="revert(history)">删除</div>
-            <div ng-click="goDetail(history)" >
+        <li ng-class="{deleted : history.deleted, deletable : history.revertable}"
+            ng-switch="history.type"
+            ng-repeat="history in histories"
+            hm-drag-left="swipeLeft(history.revertable, $event)"
+            hm-drag-right="swipeRight(history.revertable, $event)"
+            ng-style="leftMoveStyle">
+            <div ng-if="history.revertable" class="delete"  ng-click="revert(history)"><span>删除</span></div>
+            <div ng-click="goDetail(history)" class="item" ng-style="">
                 <img ng-src="{{history.creater.headimgurl}}" alt=""/>
                 <div class="detail" ng-switch-when="1">
                     <span class="who">{{history.data.username}}</span>创建<span class="tuan">{{history.data.tuanname}}</span>团
