--- a/public/html/list.html
+++ b/public/html/list.html
@@ -1,17 +1,22 @@
 <div class="s-list">
     <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
-    <div  ng-show="loaded" >
-        <div ng-class="{shake : data.news !== 0, bounceIn : data.new}" ng-style="{{data.animatDelayStyle}}" ng-repeat="data in list" class="tuan  animated infinite" ng-click="enterTuan(data)">
-            <span ng-show="data.news !== 0" class="new">{{data.news}}</span>
-            <span class="name">{{data.name}}</span>
+    <div ng-show="loaded" >
+        <div class="list">
+            <div ng-class="{shake : data.news !== 0, bounceIn : data.new}" ng-style="{{data.animatDelayStyle}}" ng-repeat="data in list" class="tuan  animated infinite" ng-click="enterTuan(data)">
+                <span ng-show="data.news !== 0" class="new">{{data.news}}</span>
+                <span class="name">{{data.name}}</span>
+            </div>
         </div>
 
         <div class="index-nav">
-            <span class="menu"></span>
             <span class="self">
-                <span class="user" ng-show="!modName" ng-click="changeName()">{{user.nickname}}</span>共消费<span class="money">{{user.money}}</span>元
+                <span class="avatar"><img src="{{user.headimgurl}}" alt=""/></span>
+                <span class="user-info">
+                    <span class="user" ng-show="!modName" ng-click="changeName()">{{user.nickname}}</span>
+                    <span class="total">共消费<span class="money">{{user.money}}</span>元</span>
+                </span>
             </span>
-            <span class="create" ng-click="creatTuan()">建团</span>
+            <span class="create" ng-click="creatTuan()"><span class="icon icon-add"></span>建团</span>
         </div>
     </div>
 </div>
