--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -1,9 +1,10 @@
 <div class="nav">
     <!-- <h1>{{curTabName}}</h1> -->
     <ul>
-        <li ng-class="{cur : column === 1 }" class="me"><a href="#/tuan/">我</a></li>
-        <li ng-class="{cur : column === 2 }"><a href="#/tuan/{{tuanId}}/members">成员</a></li>
-        <li ng-class="{cur : column === 4 }"><a href="#/tuan/{{tuanId}}/history">历史</a></li>
-        <li ng-class="{cur : column === 3 }"><a href="#/tuan/{{tuanId}}/home">设置</a></li>
+        <li ng-class="{cur : column === 1 }" class="me"><a href="#/tuan/"><span class="icon icon-home"></span></a></li>
+        <li ng-class="{cur : column === 2 }"><a href="#/tuan/{{tuanId}}/members"><span class="icon icon-users-outline"></span></a></li>
+        <li>.</li>
+        <li ng-class="{cur : column === 4 }"><a href="#/tuan/{{tuanId}}/history"><span class="icon icon-clock"></span></a></li>
+        <li ng-class="{cur : column === 3 }"><a href="#/tuan/{{tuanId}}/home"><span class="icon icon-wrench"></span></a></li>
     </ul>
 </div>
