--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -1,12 +1,13 @@
 <div class="s-bill">
     <ng-include src="'./html/nav.html'"></ng-include>
     <div class="bill">
-        <h1>今天我买单</h1>
-        <h2>
+        <div class="hd">
+            <img src="{{}}" alt=""/>
+            <p><span class="user"></span>为<span>{{name}}</span>买单</p>
             <label for="mode">
                 <input type="checkbox" id="mode" name="mode" ng-model="abMode">筹款模式
             </label>
-        </h2>
+        </div>
         <h2>聚餐团员：{{curTotal}} 人 <label for="all"><input ng-click="selectAll()" type="checkbox" id="all" ng-model="all"/>全选</label></h2>
         <div class="members">
             <label hm-hold="setMoney(member)" ng-style="member.avatarBg" ng-class="{choosen : member.inThis}" ng-repeat="member in members">
@@ -23,7 +24,9 @@
             </div>
         </h2>
         <h2 ng-show="!abMode">人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkAverage}}</span></h2>
-        <a href="javascript:;" ng-click="confirm()" class="btn-s warn confirm">确认</a>
+        <a href="javascript:;" ng-click="confirm()" class="index-btn circle-btn">
+            <span class="icon icon-check"></span>
+            <span>确认</span></a>
     </div>
 
 </div>
