--- a/public/css/icons-reference.html
+++ b/public/css/icons-reference.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Font Reference - eattogether</title>
     <link href="http://fonts.googleapis.com/css?family=Dosis:400,500,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="styles.css">
     <style type="text/css">
       html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-weight:inherit;font-style:inherit;font-family:inherit;font-size:100%;vertical-align:baseline}
 body{line-height:1;color:#000;background:#fff}
@@ -85,6 +85,14 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <div class="icon icon-user-outline"></div>
           <input type="text" readonly="readonly" value="user-outline">
         </li>
+        <li>
+          <div class="icon icon-logout"></div>
+          <input type="text" readonly="readonly" value="logout">
+        </li>
+        <li>
+          <div class="icon icon-up-bold"></div>
+          <input type="text" readonly="readonly" value="up-bold">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -127,6 +135,14 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
         <li>
           <div data-icon="j" class="icon"></div>
           <input type="text" readonly="readonly" value="j">
+        </li>
+        <li>
+          <div data-icon="k" class="icon"></div>
+          <input type="text" readonly="readonly" value="k">
+        </li>
+        <li>
+          <div data-icon="l" class="icon"></div>
+          <input type="text" readonly="readonly" value="l">
         </li>
       </ul>
     </div><script type="text/javascript">
