--- a/public/html/tuanHistory.html
+++ b/public/html/tuanHistory.html
@@ -55,4 +55,9 @@
             </div>
         </li>
     </ul>
+
+    <a href="javascript:;" ng-click="goTop()" class="index-btn circle-btn warn quit">
+        <span class="icon icon-up-bold"></span>
+        顶部
+    </a>
 </div>
