--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -1,32 +1,46 @@
 <div class="s-bill">
     <ng-include src="'./html/nav.html'"></ng-include>
-    <div class="bill">
+    <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
+    <div ng-show="loaded" class="bill">
         <div class="hd">
-            <img src="{{}}" alt=""/>
-            <p><span class="user"></span>为<span>{{name}}</span>买单</p>
-            <label for="mode">
-                <input type="checkbox" id="mode" name="mode" ng-model="abMode">筹款模式
-            </label>
-        </div>
-        <h2>聚餐团员：{{curTotal}} 人 <label for="all"><input ng-click="selectAll()" type="checkbox" id="all" ng-model="all"/>全选</label></h2>
-        <div class="members">
-            <label hm-hold="setMoney(member)" ng-style="member.avatarBg" ng-class="{choosen : member.inThis}" ng-repeat="member in members">
-                <input type="checkbox" ng-change="changeMember()" ng-model="member.inThis">
-                <p>{{member.moneySpent === 0 ? member.name : member.moneySpent}}</p>
-            </label>
-        </div>
-        <h2 ng-show="!abMode">非团员：<input type="number" placeholder="0" ng-model="notMember"></h2>
-        <h2>{{curTotal + notMember}}人共消费：
-            <input type="number" placeholder="输入买单金额" ng-model="totalMoney" >
-            <span class="tips" ng-show="abMode" ng-click="abModeTipShow = !abModeTipShow">?</span>
-            <div class="tip-panel" ng-show="abModeTipShow">
-                筹款模式下"总消费"金额选填。不填时当所有人都已付款则自动结束筹款，不验证筹款总额。
+            <img src="{{user.headimgurl}}" alt=""/>
+            <p><span class="user">{{user.nickname}}</span>为<span>{{name}}团</span>买单</p>
+            <div class="mode">
+                <span ng-class="{choosen : !abMode}" ng-click="abMode = false">AA模式</span>
+                <span ng-class="{choosen : abMode}" ng-click="abMode = true">筹款模式</span>
             </div>
-        </h2>
-        <h2 ng-show="!abMode">人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkAverage}}</span></h2>
-        <a href="javascript:;" ng-click="confirm()" class="index-btn circle-btn">
-            <span class="icon icon-check"></span>
-            <span>确认</span></a>
+        </div>
+        <div class="bd">
+            <h2>聚餐团员：<span class="sp">{{curTotal}} </span>人 <label class="all" for="all"><input ng-click="selectAll()" type="checkbox" id="all" ng-model="all"/>全选</label></h2>
+            <div class="members">
+                <label hm-hold="setMoney(member)" ng-style="member.avatarBg" ng-class="{choosen : member.inThis}" ng-repeat="member in members">
+                    <input type="checkbox" ng-change="changeMember()" ng-model="member.inThis">
+                    <span ng-show="member.inThis" class="icon icon-check-mark-2"></span>
+                    <span  ng-show="!member.inThis" class="icon icon-square-line"></span>
+                    <p>{{member.moneySpent === 0 ? member.name : member.moneySpent}}</p>
+                </label>
+            </div>
+        </div>
+        <div class="ft">
+
+            <h2 ng-show="!abMode">
+                <span class="icon icon-user-outline"></span>
+                非团员数：
+                <input type="number" placeholder="0" ng-model="notMember"></h2>
+            <h2>
+                <span class="icon icon-yen"></span>
+                消费金额：
+                <input type="number" placeholder="输入买单金额" ng-model="totalMoney" >
+                <span class="tips" ng-show="abMode" ng-click="abModeTipShow = !abModeTipShow">?</span>
+                <div class="tip-panel" ng-show="abModeTipShow">
+                    筹款模式下"总消费"金额选填。不填时当所有人都已付款则自动结束筹款，不验证筹款总额。
+                </div>
+                <span ng-show="!abMode" class="aver">人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkAverage}}</span></span>
+            </h2>
+            <a href="javascript:;" ng-click="confirm()" class="index-btn circle-btn">
+                <span class="icon icon-check"></span>
+                <span>确认</span></a>
+        </div>
     </div>
 
 </div>
