--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -1,4 +1,4 @@
-<div class="nav">
+<div class="nav"  ng-show="loaded">
     <!-- <h1>{{curTabName}}</h1> -->
     <ul>
         <li ng-class="{cur : column === 1 }" class="me"><a href="#/tuan/"><span class="icon icon-home"></span></a></li>
