--- a/public/html/tuanHistory.html
+++ b/public/html/tuanHistory.html
@@ -56,7 +56,7 @@
         </li>
     </ul>
 
-    <a href="javascript:;" ng-click="goTop()" class="index-btn circle-btn warn quit">
+    <a href="javascript:;" ng-click="goTop()" ng-show="loaded" class="index-btn circle-btn warn quit">
         <span class="icon icon-up-bold"></span>
         顶部
     </a>
