--- a/public/html/tuanIndex.html
+++ b/public/html/tuanIndex.html
@@ -17,7 +17,7 @@
             团口号：
             <textarea ng-blur="save()" name="broadcast" ng-model="newSlogan" value="{{slogan}}"  id="" cols="30" rows="10">{{slogan}}</textarea>
         </label>
-        <a href="javascript:;" ng-click="quit()" class="index-btn circle-btn warn quit">
+        <a href="javascript:;" ng-show="loaded" ng-click="quit()" class="index-btn circle-btn warn quit">
             <span class="icon icon-logout"></span>
             退团
         </a>
