--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -2,7 +2,7 @@
     <!-- <h1>{{curTabName}}</h1> -->
     <ul>
         <li ng-class="{cur : column === 1 }" class="me"><a href="#/tuan/"><span class="icon icon-home"></span></a></li>
-        <li ng-class="{cur : column === 2 }"><a href="#/tuan/{{tuanId}}/members"><span class="icon icon-users-outline"></span></a></li>
+        <li ng-class="{cur : column === 2 }"><a href="#/tuan/{{tuanId}}/members"><span class="icon icon-users-outline"></span>aaaaaaaaaa</a></li>
         <li class="placeholder">.</li>
         <li ng-class="{cur : column === 4 }"><a href="#/tuan/{{tuanId}}/history"><span class="icon icon-clock"></span></a></li>
         <li ng-class="{cur : column === 3 }"><a href="#/tuan/{{tuanId}}/home"><span class="icon icon-wrench"></span></a></li>
