--- a/public/html/tuanHistoryDetail.html
+++ b/public/html/tuanHistoryDetail.html
@@ -2,23 +2,47 @@
     <ng-include src="'./html/nav.html'"></ng-include>
     <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
     <div class="history-view" ng-show="loaded">
-        <div class="mode-normal" ng-if="type < 12">
-            <h1>今天我买单<span ng-show="type == 11">(已撤销)</span></h1>
-            <h2 class="date">{{date}}</h2>
-            <h2>聚餐团员：{{members.length}} 人</h2>
+        <div class="hd">
+            <img src="{{user.headimgurl}}" alt=""/>
+            <p><span class="user">{{user.nickname}}</span>为<span>{{name}}团</span>买单</p>
+            <span ng-show="type == 11 || type == 14">(已撤销)</span>
+            <span ng-show="type == 13">(已完成)</span>
+            <div class="mode">
+                <span ng-class="{choosen : !abMode}">AA模式</span>
+                <span ng-class="{choosen : abMode}" >筹款模式</span>
+            </div>
+        </div>
+        <div class="bd">
+            <h2>聚餐团员：<span class="sp">{{members.length + otherSum}} </span>人 </h2>
             <div class="members">
-                <label ng-style="member.avatarBg" ng-repeat="member in members">
+                <label ng-style="member.avatarBg" ng-class="choosen" ng-repeat="member in members">
+                    <span ng-show="member.inThis" class="icon icon-check-mark-2"></span>
                     <p>{{member.name}}</p>
                 </label>
             </div>
-            <h2 >非团员：<span>{{othersnum}}</span>人</h2>
-            <h2>{{members.length + othersnum}}人共消费：
-                <span>{{money}}</span>
-            </h2>
-            <h2>人均：<span class="average">{{money/(members.length + othersnum) | checkAverage}}</span></h2>
         </div>
+        <div class="ft">
+            <h2 ng-show="!abMode">
+                <span class="icon icon-user-outline"></span>
+                非团员数：
+                <input type="number" value="{{othersnum}}" disabled="">
+            </h2>
+            <h2>
+                <span class="icon icon-yen"></span>
+                消费金额：
+                <input type="number" value="{{money}}" disabled="">
+                <span ng-show="!abMode" class="aver">人均：<span class="average">{{money/(members.length + othersnum) | checkAverage}}</span></span>
+            </h2>
+            <div ng-show="abMode">
+                <h2>筹款完成百分比：{{percent * 100 + '%'}}</h2>
+                <span class="process-bar"><span class="inner" ng-style="processbarStyle"><span ng-show="sum !== 0" class="sum">已筹{{sum}}元</span></span><span ng-style="processbarStyleTotal" class="total">{{(money - sum > 0) ? ('还差' + (money - sum) + '元') : ''}}</span></span>
+                <span class="btn-s warn cancel" ng-show="type == 12" ng-click="cancelAbBill()">结束筹款</span>
+            </div>
+
+        </div>
+
         <div class="mode-abup" ng-if="type > 11">
-            <h1>今天我买单<span ng-show="type == 13">(已完成)</span><span ng-show="type == 14">(已撤销)</span></h1>
+            <h1>今天我买单<span ng-show="type == 14">(已撤销)</span></h1>
             <h2 class="date">{{date}}</h2>
             <div class="members">
                 <label hm-hold="modMoney(member)" ng-class="{paid : member.money != 0}" ng-style="member.avatarBg"  ng-repeat="member in members">
@@ -26,9 +50,7 @@
                 </label>
             </div>
             <h2 ng-show="money">筹款目标：{{money}} 元</h2>
-            <h2>筹款完成百分比：{{percent * 100 + '%'}}</h2>
-            <span class="process-bar"><span class="inner" ng-style="processbarStyle"><span ng-show="sum !== 0" class="sum">已筹{{sum}}元</span></span><span ng-style="processbarStyleTotal" class="total">{{(money - sum > 0) ? ('还差' + (money - sum) + '元') : ''}}</span></span>
-            <span class="btn-s warn cancel" ng-show="type == 12" ng-click="cancelAbBill()">结束筹款</span>
+
         </div>
     </div>
 </div>
