adjust bill page

--- a/public/html/tuanHistory.html
+++ b/public/html/tuanHistory.html
@@ -56,8 +56,8 @@
         </li>
     </ul>
 
-    <a href="javascript:;" ng-click="goTop()" ng-show="loaded" class="index-btn circle-btn warn quit">
-        <span class="icon icon-up-bold"></span>
-        顶部
-    </a>
+    <a href="javascript:;"   ng-click="bill()" class="index-btn circle-btn circle-btn-right">
+            <span class="icon icon-yen"></span>
+            <span class="tip">买单</span>
+        </a>
 </div>
