--- a/public/html/tuanHistoryDetail.html
+++ b/public/html/tuanHistoryDetail.html
@@ -15,7 +15,7 @@
         <div class="bd">
             <h2>聚餐团员：<span class="sp">{{members.length + otherSum}} </span>人 </h2>
             <div class="members">
-                <label ng-style="member.avatarBg" ng-class="choosen" ng-repeat="member in members">
+                <label ng-click="modMoney(member)" ng-style="member.avatarBg" ng-class="choosen" ng-repeat="member in members">
                     <span ng-show="member.inThis" class="icon icon-check-mark-2"></span>
                     <p>{{member.name}}</p>
                 </label>
@@ -36,20 +36,11 @@
             <div ng-show="abMode">
                 <h2>筹款完成百分比：{{percent * 100 + '%'}}</h2>
                 <span class="process-bar"><span class="inner" ng-style="processbarStyle"><span ng-show="sum !== 0" class="sum">已筹{{sum}}元</span></span><span ng-style="processbarStyleTotal" class="total">{{(money - sum > 0) ? ('还差' + (money - sum) + '元') : ''}}</span></span>
-                <span class="btn-s warn cancel" ng-show="type == 12" ng-click="cancelAbBill()">结束筹款</span>
+                <a href="javascript:;"   ng-click="cancelAbBill()" class="index-btn circle-btn circle-btn-right">
+                    <span class="icon icon-yen"></span>
+                    <span class="tip">结束筹款</span>
+                </a>
             </div>
-
-        </div>
-
-        <div class="mode-abup" ng-if="type > 11">
-            <h1>今天我买单<span ng-show="type == 14">(已撤销)</span></h1>
-            <h2 class="date">{{date}}</h2>
-            <div class="members">
-                <label hm-hold="modMoney(member)" ng-class="{paid : member.money != 0}" ng-style="member.avatarBg"  ng-repeat="member in members">
-                    <p>{{member.modMoney}}</p>
-                </label>
-            </div>
-            <h2 ng-show="money">筹款目标：{{money}} 元</h2>
 
         </div>
     </div>
