--- a/public/html/tuanHistoryDetail.html
+++ b/public/html/tuanHistoryDetail.html
@@ -4,7 +4,7 @@
     <div class="history-view" ng-show="loaded">
         <div class="hd">
             <img src="{{user.headimgurl}}" alt=""/>
-            <p><span class="user">{{user.nickname}}</span>为<span>{{name}}团</span>买单</p>
+            <p><span class="user">{{user.nickname}}</span>为<span>{{tuanname}}团</span>买单</p>
             <span ng-show="type == 11 || type == 14">(已撤销)</span>
             <span ng-show="type == 13">(已完成)</span>
             <div class="mode">
