--- a/public/html/tuanHistoryDetail.html
+++ b/public/html/tuanHistoryDetail.html
@@ -30,7 +30,7 @@
                 非团员数：
                 <input type="number" value="{{othersnum}}" disabled="">
             </h2>
-            <h2>
+            <h2 ng-show="money !== null" >
                 <span class="icon icon-yen"></span>
                 消费金额：
                 <input type="number" value="{{money}}" disabled="">
